Fixed issues and bugs in DAO package